--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -16,7 +16,8 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <a class="btn btn-primary mx-3" href="{{url_for('create_utub')}}">+</a>
+                <!-- <a class="btn btn-primary mx-3" href="{{url_for('create_utub')}}">+</a> -->
+                <a class="btn btn-primary mx-3" modal-target="/create_utub" onclick="openModal(this.getAttribute('modal-target'))">+</a>
             </div>
         </div>
         <div class="deckContent">
