--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -16,8 +16,7 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <!-- <a class="btn btn-primary mx-3" href="{{url_for('create_utub')}}">+</a> -->
-                <a class="btn btn-primary mx-3" modal-target="/create_utub" onclick="openModal(this.getAttribute('modal-target'))">+</a>
+                <a class="btn btn-primary mx-3" modal-target="/create_utub" onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
             </div>
         </div>
         <div class="deckContent">
@@ -43,12 +42,11 @@
 <div id="centerPanel" class="panel col-md-7">
     <div id="UTubContent" class="deck h-100 mb-md-1 p-3">
         <div class="row justify-content-center mx-2">
-            <div class="col-9 col-lg-9 mb-md-0">
+            <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <h2 id="UTubHeader">Select a UTub</h2>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
-                <a type="button" id="addURL" class="btn btn-success btn-sm mb-3 justify-content-center"
-                    href="#">Add a URL</a>
+                <a class="btn btn-success mx-3" id="addURL" modal-target="#" onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
             </div>
         </div>
         <div class="deckContent justify-content-center">
