--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -44,6 +44,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="{{url_for('home')}}">Home</a>
                 </li>
+                {% if current_user.is_authenticated %}
+                <li class="nav-item user">
+                    <a class="nav-link" href="#">{% print(current_user) %}</a>
+                </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
