--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -16,7 +16,8 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <a class="btn btn-primary mx-3" modal-target="/create_utub" onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
+                <a class="btn btn-primary mx-3" modal-target="/create_utub"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
             </div>
         </div>
         <div class="deckContent">
@@ -46,7 +47,8 @@
                 <h2 id="UTubHeader">Select a UTub</h2>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
-                <a class="btn btn-success mx-3" id="addURL" modal-target="#" onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
+                <a class="btn btn-success mx-3" id="addURL" modal-target="#"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
             </div>
         </div>
         <div class="deckContent justify-content-center">
@@ -83,9 +85,9 @@
             <option disabled selected value> -- Select a UTub -- </option>
         </select>
 
+        <h5>Actions</h5>
         <div id="UTubActions" class="row">
-            <h5>Actions</h5>
-            <a id="addUser" class="btn btn-success btn-sm mb-3 mx-1" href="#">Add a User</a>
+            <!-- <a id="addUser" class="btn btn-success btn-sm mb-3 mx-1" href="#">Add a User</a>
 
             <div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog"
                 aria-labelledby="removeUserModalLabel" aria-hidden="true">
@@ -111,48 +113,20 @@
             </div>
 
             <button class="btn btn-warning btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal">Remove
-                this User</button>
+                this User</button> -->
 
-            <!-- <form id="removeUserTemp" action="#" method="post">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    button
-                </form> -->
-
-            <!-- <form action="#" method="post">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    Modal
-                    div.modal
-                </form> -->
-
-            <form id="deleteUTubTemp" action="#" method="post">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                <button class="btn btn-danger btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUTubModal"
-                    href="#">Delete this UTub</button>
-            </form>
-
-            <!-- <form action="#" method="post">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    Modal
-                    <div class="modal fade" id="deleteUTubModal" tabindex="-1" role="dialog" aria-labelledby="deleteUTubModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                <h5 class="modal-title" id="deleteUTubModalLabel">Are you sure you want to delete?</h5>
-                                <a type="a" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </a>
-                                </div>
-                                <div class="modal-body">
-                                    URLs in the UTub will no longer be accessible. This action cannot be undone.
-                                </div>
-                                <div class="modal-footer">
-                                <button type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My Mind</button>
-                                <button type="a" id="deleteUTub" href="#" class="btn btn-danger">Delete UTub</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form> -->
+            <div class="col-4 col-lg-4 text-left">
+                <a class="btn btn-success mx-3" id="addUser" modal-target="#"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>Add New User</b></a>
+            </div>
+            <div class="col-4 col-lg-4 text-center">
+                <a class="btn btn-warning mx-3" id="removeUser" modal-target="#"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>Remove Selected User</b></a>
+            </div>
+            <div class="col-4 col-lg-4 text-right">
+                <a class="btn btn-danger mx-3" id="deleteUTub" modal-target="#"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>Delete Current UTub</b></a>
+            </div>
         </div>
 
         <h5>Description</h5>
