--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -167,6 +167,10 @@ span.tag {
     border: 5px solid rgb(13, 255, 0);
 }
 
+.close-icon {
+    cursor: pointer;
+}
+
 .fa-arrow-down {
     transform: rotate(0deg);
     transition: transform 100ms linear;
