--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -62,7 +62,7 @@
             <img src="https://images.unsplash.com/photo-1613271007499-130e4d331a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
                 alt="Create a Tub!">
             {% else %}
-            <div id="listURLs" class="row list-content justify-content-center">
+            <div id="listURLs" class="row list-content justify-content-center board-list">
                 <!-- Current selected UTub's URLs will be displayed here -->
             </div>
             {% endif %}
@@ -87,34 +87,6 @@
 
         <h5>Actions</h5>
         <div id="UTubActions" class="row">
-            <!-- <a id="addUser" class="btn btn-success btn-sm mb-3 mx-1" href="#">Add a User</a>
-
-            <div class="modal fade" id="removeUserModal" tabindex="-1" role="dialog"
-                aria-labelledby="removeUserModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="removeUserModalLabel">Are you sure you want to remove this
-                                user?</h5>
-                            <a type="a" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </a>
-                        </div>
-                        <div class="modal-body">
-                            This user will no longer have the ability to view or add URLs in the UTub.
-                        </div>
-                        <div class="modal-footer">
-                            <button type="a" class="btn btn-secondary" data-dismiss="modal">I Changed My
-                                Mind</button>
-                            <button type="a" id="removeUser" href="#" class="btn btn-danger">Remove User</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <button class="btn btn-warning btn-sm mb-3 mx-1" data-toggle="modal" data-target="#removeUserModal">Remove
-                this User</button> -->
-
             <div class="col-4 col-lg-4 text-left">
                 <a class="btn btn-success mx-3" id="addUser" modal-target="#"
                     onclick="openModal(this.getAttribute('modal-target'))"><b>Add New User</b></a>
@@ -150,9 +122,9 @@
 
         <div class="justify-content-center row">
             <button id="URLLink" class="btn btn-success btn-sm mb-3 mx-1" onclick="accessLink()">Access URL</button>
-            <a id="addTags" class="btn btn-info btn-sm mb-3 mx-1" href="#">Add tags</a>
+            <a id="addTags" class="btn btn-info btn-sm mb-3 mx-1">Add tags</a>
             <button id="EditURL" class="btn btn-primary btn-sm mb-3 mx-1" onclick="editURL()">Edit URL</button>
-            <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1" href="#">Delete this URL</a>
+            <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1">Delete this URL</a>
         </div>
 
         <h5>Description</h5>
