--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -8,30 +8,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block scripts_for_login %}
+        {% if current_user.is_authenticated %}
+            <meta name="csrf" content="{{ csrf_token() }}">
+        {% endif %}
+    {% endblock %}
+    
+    <!-- JS -->
+    
+    <!-- Add jQuery to aid with DOM manipulation -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
+
+    <!-- Add jQuery to aid with DOM manipulation -- local dev -->
+    <script src="/static/scripts/jquery-3.6.0.js"></script>
 
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet"> -->
 
+    <!-- CSS -->
     <!-- Bootstrap -->
     <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
-    <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
 
-    <!-- FontAwesome CSS -->
+    <!-- Bootstrap -- local dev -->
+    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
+
+    <!-- FontAwesome -- commented out for local dev -->
     <!-- https://fontawesome.com/v4/get-started/ -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
-    <!-- Custom CSS -->
+    <!-- Custom -->
     <link rel="stylesheet" href="/static/styles/app.css">
 
-    <!-- Add jQuery to aid with DOM manipulation -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>  -->
+
+    <!-- Bootstrap -- local dev -->
+    <script src="/static/scripts/bootstrap.min.js"></script>
+    <script src="/static/scripts/bootstrap.bundle.min.js"></script>
 
     <title>URLS4IRL</title>
 </head>
