Committing to pull the latest

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -73,9 +73,9 @@
 <!-- Right Side Panel -->
 
 <div id="rightPanel" class="panel col-md-3">
-    <div id="UTubInfoDeck" class="deck row h-25 mb-md-1 p-3" style="display:block">
+    <div id="MembersDeck" class="deck row h-50 mb-md-1 p-3" style="display:block">
 
-        <h2>UTub Information</h2>
+        <h2>Members</h2>
 
         <h5>Owner</h5>
         <span id="UTubOwner"></span>
@@ -116,25 +116,7 @@
         </p>
     </div>
 
-    <div id="URLInfoDeck" class="deck row h-50 mb-md-1 p-3" style="display:block">
-
-        <h2>URL Information</h2>
-
-        <div class="justify-content-center row">
-            <button id="URLLink" class="btn btn-success btn-sm mb-3 mx-1" onclick="accessLink()">Access URL</button>
-            <a id="addTags" class="btn btn-info btn-sm mb-3 mx-1">Add tags</a>
-            <button id="EditURL" class="btn btn-primary btn-sm mb-3 mx-1" onclick="editURL()">Edit URL</button>
-            <a id="DeleteURL" class="btn btn-danger btn-sm mb-3 mx-1">Delete this URL</a>
-        </div>
-
-        <h5>Description</h5>
-        <p id="URLInfo" class="lead" contentEditable="true">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
-            beatae, maiores deserunt
-        </p>
-    </div>
-
-    <div id="ChatDeck" class="deck row h-25 p-3">
+    <div id="ChatDeck" class="deck row h-50 p-3">
         <h2>Chat</h2>
         <p class="lead">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae
