--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -62,7 +62,7 @@
             <img src="https://images.unsplash.com/photo-1613271007499-130e4d331a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
                 alt="Create a Tub!">
             {% else %}
-            <div id="listURLs" class="row list-content justify-content-center board-list">
+            <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
             </div>
             {% endif %}
