Oops. Forgot to make sure it resets when toggling between UTubs. All good now

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -64,6 +64,15 @@
             {% else %}
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
+                <div id="UPRRow" class="row list-content justify-content-center board-list">
+                    <!-- URLs above selected URL will be displayed here -->
+                </div>
+                <div id="URLFocusRow" class="row list-content justify-content-center board-list">
+                    <!-- Selected URL will be highlighted here -->
+                </div>
+                <div id="LWRRow" class="row list-content justify-content-center board-list">
+                    <!-- URLs below selected URL will be displayed here -->
+                </div>
             </div>
             {% endif %}
         </div>
