--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -39,7 +39,7 @@ input[type=checkbox] {
     padding-right: 10px;
     border-radius: 15px;
 
-    -webkit-appearance: button;
+    /* -webkit-appearance: button; */
 
     border: double 2px #00F;
 
