--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -29,7 +29,15 @@
     <!-- LWR LH Panel, Tags ("orange") -->
     <!-- Will be alpha ordered -->
     <div id="TagDeck" class="deck row h-50 p-3">
-        <h2>Tags</h2>
+        <div class="col-9 col-lg-9 mb-md-0">
+            <h2>Tags</h2>
+        </div>
+        <div class="col-3 col-lg-3 mb-md-0 text-right">
+            <div class="d-flex justify-content-center flex-row">
+                <a class="btn btn-primary mx-3" modal-target="/create_tag"
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
+            </div>
+        </div>
         <div class="deckContent form-group">
             <form id="listTags">
                 <h5>No UTub Selected</h5>
