Updated edit URL button functionality. Still needs to prevent a second click populating text input with HTML. Additionally, started editing of tags in the Tags deck (bottom left)

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -35,7 +35,11 @@
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <a class="btn btn-primary mx-3" modal-target="/create_tag"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
+                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b>
+                </a>
+                <a class="btn btn-primary mx-3" modal-target="/edit_tags"><b><i class="fa-solid fa-pencil"></i></b>
+                </a>
+                <i class="fa-solid fa-square-check"></i>
             </div>
         </div>
         <div class="deckContent form-group">
