--- a/urls4irl/templates/_add_tag_form.html
+++ b/urls4irl/templates/_add_tag_form.html
@@ -1,36 +1,26 @@
-<script type="text/javascript">
-    if (document.querySelector('head').childElementCount === 1) {
-        window.location.href = '/home';
-    };
-</script>
-
-<form id="ModalForm" name="stepForm" class="form" method="post" action="" novalidate>
+<form id="ModalForm" name="stepForm" class="form" method="POST" action="" novalidate>
     <div class="modal-header" >
-        <h4 class="modal-title">Add a URL!</h4>
+        <h4 class="modal-title">Make a New UTub!</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+
     <div class="modal-body" id="modal-body">        
-        {{ utub_new_url_form.hidden_tag() }}
-        <fieldset class="form-group">
-            <div class="form-group">
-                {{ utub_new_url_form.url_string.label(class="form-control-label")}}
-                {% if utub_new_url_form.url_string.errors %}
-                    {{ utub_new_url_form.url_string(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in utub_new_url_form.url_string.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ utub_new_url_form.url_string(class="form-control form-control-lg")}}
-                {% endif %}
-            </div>
-        </fieldset>
+            {{ utub_form.hidden_tag() }}
+            <fieldset class="form-group">
+                <div class="form-group">
+                    {{ utub_form.name.label(class="form-control-label")}}
+                    {{ utub_form.name(class="form-control form-control-lg")}}
+                </div>
+                <div class="form-group">
+                    {{ utub_form.description.label(class="form-control-label")}}
+                    {{ utub_form.description(class="form-control form-control-lg")}}
+                </div>
+            </fieldset>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        {{ utub_new_url_form.submit(class="btn btn-success")}}
+        {{ utub_form.submit }}
     </div>
 </form>
