--- a/urls4irl/templates/_create_utub_form.html
+++ b/urls4irl/templates/_create_utub_form.html
@@ -21,6 +21,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        {{ utub_form.submit(class="btn btn-success")}}
+        {{ utub_form.submit }}
     </div>
 </form>
