--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block scripts_for_login %}
         {% if current_user.is_authenticated %}
-            <meta name="csrf" content="{{ csrf_token() }}">
+            <meta name="csrf-token" content="{{ csrf_token() }}">
         {% endif %}
     {% endblock %}
     
