--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -16,24 +16,12 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <a class="btn btn-primary mx-3" modal-target="/create_utub"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
-
+                <i id="createUTub" class="bi bi-plus-square-fill fa-2x text-success mx-1"></i>
+                <i id="deleteUTub" class="bi bi-x-square-fill fa-2x text-danger mx-1"></i>
             </div>
         </div>
         <div class="deckContent">
             <form></form>
-        </div>
-
-        <div id="UTubActions" class="row">
-            <div class="col-6 col-lg-6">
-                <a class="btn btn-danger mx-3" id="deleteUTub" modal-target="#"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>Delete UTub</b></a>
-            </div>
-            <div class="col-6 col-lg-6">
-                <a class="btn btn-danger mx-3" id="editUTub" modal-target="#"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>Edit UTub</b></a>
-            </div>
         </div>
     </div>
 
@@ -46,12 +34,8 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <a class="btn btn-primary mx-3" modal-target="/create_tag"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b>
-                </a>
-                <a class="btn btn-primary mx-3" modal-target="/edit_tags"><b><i class="fa-solid fa-pencil"></i></b>
-                </a>
-                <i class="fa-solid fa-square-check"></i>
+                <i class="bi bi-plus-square-fill fa-2x text-success mx-1" id="createTag"></i>
+                <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTags"></i>
             </div>
         </div>
         <div class="deckContent form-group">
@@ -68,24 +52,14 @@
     <div id="UTubContent" class="deck h-100 mb-md-1 p-3">
         <div class="row justify-content-center mx-2">
             <div class="col-9 col-lg-9 mb-md-0 text-left">
-                <h2 id="UTubHeader">Select a UTub</h2>
+                <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
+                <i id="editUTub" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"></i>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
-                <a class="btn btn-success mx-3" id="addURL" modal-target="#"
-                    onclick="openModal(this.getAttribute('modal-target'))"><b>+</b></a>
+                <i id="addURL" class="bi bi-plus-square-fill fa-2x text-success mx-1"></i>
             </div>
         </div>
         <div class="deckContent justify-content-center">
-            <img id="TubImage"
-                src="https://images.unsplash.com/photo-1613271007499-130e4d331a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-                alt="Select a Tub!">
-            <!-- Figure out Font Awesome icons... -->
-            <!-- <i class="fas fa-bath"></i>
-                <i class="fa fa-flask"></i> -->
-            {% if not utubs_for_this_user %}
-            <img src="https://images.unsplash.com/photo-1613271007499-130e4d331a46?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-                alt="Create a Tub!">
-            {% else %}
             <div id="listURLs">
                 <!-- Current selected UTub's URLs will be displayed here -->
                 <div id="UPRRow" class="row list-content justify-content-center board-list">
@@ -98,7 +72,6 @@
                     <!-- URLs below selected URL will be displayed here -->
                 </div>
             </div>
-            {% endif %}
         </div>
     </div>
 </div>
