--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -9,40 +9,19 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block scripts_for_login %}
-        {% if current_user.is_authenticated %}
-            <meta name="csrf-token" content="{{ csrf_token() }}">
-        {% endif %}
+    {% if current_user.is_authenticated %}
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+    {% endif %}
     {% endblock %}
-    
+
     <!-- JS -->
-    
+
     <!-- Add jQuery to aid with DOM manipulation -->
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
     <!-- Add jQuery to aid with DOM manipulation -- local dev -->
     <script src="/static/scripts/jquery-3.6.0.js"></script>
-
-    <!-- Google Font -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet"> -->
-
-    <!-- CSS -->
-    <!-- Bootstrap -->
-    <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-
-    <!-- Bootstrap -- local dev -->
-    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
-
-    <!-- FontAwesome -- commented out for local dev -->
-    <!-- https://fontawesome.com/v4/get-started/ -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
-
-    <!-- Custom -->
-    <link rel="stylesheet" href="/static/styles/app.css">
 
 
     <!-- Bootstrap Bundle with Popper -->
@@ -53,6 +32,29 @@
     <!-- Bootstrap -- local dev -->
     <script src="/static/scripts/bootstrap.min.js"></script>
     <script src="/static/scripts/bootstrap.bundle.min.js"></script>
+
+    <!-- Google Font -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet"> -->
+
+    <!-- CSS -->
+    <!-- Bootstrap -->
+    <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
+    <!-- Bootstrap -- local dev -->
+    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css"> -->
+    <!-- <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
+
+    <!-- FontAwesome -- commented out for local dev -->
+    <!-- https://fontawesome.com/v4/get-started/ -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Custom -->
+    <link rel="stylesheet" href="/static/styles/app.css">
+
 
     <title>URLS4IRL</title>
 </head>
