--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -16,8 +16,8 @@
         </div>
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
-                <i id="createUTub" class="bi bi-plus-square-fill fa-2x text-success mx-1" onclick="createUTub()"></i>
-                <i id="deleteUTub" class="bi bi-x-square-fill fa-2x text-danger mx-1"></i>
+                <i id="createUTub" class="bi bi-plus-square-fill fa-2x text-success mx-1" onclick="reqInput('createUTub')"></i>
+                <i id="deleteUTub" class="bi bi-x-square-fill fa-2x text-danger mx-1" onclick="confirmModal('deleteUTub')"></i>
             </div>
         </div>
         <div class="deckContent">
@@ -49,7 +49,7 @@
 <!-- Center Panel, URLs ("gray")-->
 
 <div id="centerPanel" class="panel col-md-7">
-    <div id="UTubContent" class="deck h-100 mb-md-1 p-3">
+    <div id="URLDeck" class="deck h-100 mb-md-1 p-3">
         <div class="row justify-content-center mx-2">
             <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
