--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -133,10 +133,31 @@
     {% block modal_extender %}
     <!-- Modal -->
 
-    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="FormModal" aria-hidden="true">
+    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="FormModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <!-- MODAL CONTENT HERE -->
+                <script type="text/javascript">
+                    if (document.querySelector('head').childElementCount === 1) {
+                        window.location.href = '/home';
+                    };
+                </script>
+
+                <form id="ModalForm" name="stepForm" class="form" method="post" action="" novalidate>
+                    <div class="modal-header">
+                        <h4 class="modal-title">Are you sure you want to delete this
+                            UTub?</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id="modal-body">
+                        This action cannot be undone.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="submit" type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
