Latest stable version. Utub functionality edited and restored. Card behavior 90% complete

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -3,7 +3,7 @@
 
 <!-- Backend load of UTub JSON data -->
 <script type="text/javascript">
-    var UTubs = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
+    var UTubsList = JSON.parse('{{utubs_for_this_user|tojson|safe}}');
 </script>
 
 <!-- Left Side Panel -->
