--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -6,6 +6,8 @@ html, body {
     background-color: #1f2424;
 }
 
+/* HTML Element */
+
 h1 {
     font-weight: 300;
     font-size: 2.5em;
@@ -135,18 +137,20 @@ span.tag {
     white-space: nowrap;
 }
 
-.tag-del {
-    padding: 0rem;
-    vertical-align: unset;
-    padding-left: 5px;
-    display: none;
-}
-
 span.tag:hover .tag-del {
     display: inline-block;
     line-height: 100%;
     height: 100%;
     font-size: 100%;
+}
+
+/* Class specific */
+
+.tag-del {
+    padding: 0rem;
+    vertical-align: unset;
+    padding-left: 5px;
+    display: none;
 }
 
 .tag-del:focus {
@@ -197,6 +201,15 @@ span.tag:hover .tag-del {
 .card-text {
     color: #8c9b9d;
 }
+
+/* .checkbox-container {
+    border: 1px solid transparent;
+    text-align: left;
+} */
+
+/* input.checkbox  {
+    float: left;
+} */
 
 .selected {
     border: 5px solid rgb(13, 255, 0);
@@ -478,30 +491,7 @@ span.tag:hover .tag-del {
     overflow: hidden;
 }
 
-/* 
-#UTubDeck {
+#listTags {
+    display: inline-block;
+    white-space: nowrap;
 }
-
-#TagDeck {
-    background: orange;
-    color: #60daaa;
-}
-
-#UTubContent {
-    background: gray;
-    color: #60daaa;
-}
-
-#MembersDeck {
-    background: blue;
-    overflow-y: auto;
-}
-
-#URLInfoDeck {
-    background: purple;
-}
-
-#ChatDeck {
-    background: green;
-    overflow-y: auto;
-} */
