--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -17,7 +17,7 @@
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <i id="createUTubButton" class="bi bi-plus-square-fill fa-2x text-success mx-1"
-                    onclick="reqInput('createUTub')"></i>
+                    onclick="showInput('createUTub')"></i>
                 <i id="deleteUTubButton" class="bi bi-x-square-fill fa-2x text-danger mx-1"
                     onclick="confirmModal('deleteUTub')"></i>
             </div>
@@ -41,8 +41,8 @@
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <i class="bi bi-plus-square-fill fa-2x text-success mx-1" id="createTagButton"
-                    onclick="reqInput('createTag')"></i>
-                <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTags"></i>
+                    onclick="showInput('createTag')"></i>
+                <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTagButton"></i>
             </div>
         </div>
         <div class="deckContent form-group">
@@ -61,14 +61,14 @@
         <div class="row justify-content-center mx-2">
             <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
-                <input type="text" id="editUTubName" class="userInput" size="30" placeholder="" value=""
+                <input type="text" id="editUTub" class="userInput" size="30" placeholder="" value=""
                     style="display: none">
-                <i id="editUTub" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"
+                <i id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"
                     onclick="editUTub()"></i>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
                 <i id="addURL" class="bi bi-plus-square-fill fa-2x text-success mx-1"
-                    onclick="reqInput('createURL')"></i>
+                    onclick="showInput('createURL')"></i>
             </div>
         </div>
         <div class="row justify-content-center mx-2">
@@ -88,23 +88,7 @@
                     <!-- Selected URL will be highlighted here -->
 
                     <!-- Creation of new URL block -->
-                    <div id="createURL" class="cardCol mb-3 col-md-10 col-lg-4 col-xl-3" style="display: none">
-                        <div urlid="0" class="card url selected">
-                            <div class="card-body URLInfo">
-                                <input type="text" class="userInput card-title" size="30"
-                                    placeholder="New URL Description" value="">
-                                <input type="text" class="userInput card-text" size="30" placeholder="New URL" value="">
-                            </div>
-                            <div class="card-body URLTags">
-                            </div>
-                            <div class="card-body URLOptions">
-                                <button class="card-link btn btn-info" type="button" onclick="reqInput('addTag')">Add
-                                    Tag</button>
-                                <button class="card-link btn btn-danger" type="button" onclick="deleteURL()">Delete
-                                    URL</button>
-                            </div>
-                        </div>
-                    </div>
+                 
                 </div>
                 <div id="LWRRow" class="row list-content justify-content-center board-list">
                     <!-- URLs below selected URL will be displayed here -->
@@ -173,7 +157,11 @@
 
 
 <!-- Home Page JS -->
+<!-- <script src="{{ url_for('static', filename='scripts/230103_home.js') }}"></script> -->
 <script src="{{ url_for('static', filename='scripts/home.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/utubs.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/tags.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/urls.js') }}"></script>
 <script src="{{ url_for('static', filename='scripts/dragdropswap.js') }}"></script>
 
 {% endblock %}
