Fixed the input blur issue. All js files pared down and parsed into their respective elements: home, utubs, tags, and urls

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -25,15 +25,13 @@
 
         <div class="deckContent">
             <form id="listUTubs">
-                <!-- <input type="text" id="createUTub" class="userInput" size="30" placeholder="New UTub name" value=""
-                    style="display: none"> -->
+                <!-- UTubs -->
             </form>
         </div>
     </div>
 
 
     <!-- LWR LH Panel, Tags -->
-    <!-- Will be alpha ordered -->
     <div id="TagDeck" class="deck row h-50 p-3">
         <div class="col-9 col-lg-9 mb-md-0">
             <h2>No UTub Selected</h2>
@@ -47,14 +45,13 @@
         </div>
         <div class="deckContent form-group">
             <form id="listTags">
-                <input type="text" id="createTag" class="userInput" size="30" placeholder="New Tag name" value=""
-                    style="display: none">
+                <!-- Tags -->
             </form>
         </div>
     </div>
 </div>
 
-<!-- Center Panel, URLs ("gray")-->
+<!-- Center Panel, URLs -->
 
 <div id="centerPanel" class="panel col-md-7">
     <div id="URLDeck" class="deck h-100 mb-md-1 p-3">
