--- a/urls4irl/static/styles/app.css
+++ b/urls4irl/static/styles/app.css
@@ -139,7 +139,7 @@ span.tag {
     white-space: nowrap;
 }
 
-span.tag:hover .tag-del {
+span.tag:hover .tag-remove {
     display: inline-block;
     line-height: 100%;
     height: 100%;
@@ -150,14 +150,14 @@ i.fa-check-square {
     float: right;
 }
 
-.tag-del {
+.tag-remove {
     padding: 0rem;
     vertical-align: unset;
     padding-left: 5px;
     display: none;
 }
 
-.tag-del:focus {
+.tag-remove:focus {
     outline: none;
     box-shadow: none;
 }
