--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block content %}
+{% block utubhome %}
 
 <!-- Backend load of UTub JSON data -->
 <script type="text/javascript">
