--- a/urls4irl/templates/register_user.html
+++ b/urls4irl/templates/register_user.html
@@ -1,14 +1,21 @@
-{% extends "layout.html" %}
-{% block content %}
+<script type="text/javascript">
+    if (document.querySelector('head').childElementCount === 1) {
+        window.location.href = '/';
+    };
+</script>
 
-<div class="d-flex justify-content-center">
-    <!-- https://www.reddit.com/r/flask/comments/nuhtmx/trouble_with_bootstrap_form_validation_alerts/ -->
-    <form method="POST" action="" novalidate>
+<form id="ModalForm" method="POST" class="login-register-form" action="" novalidate>
+    <div class="modal-header">
+        <h4 class="modal-title">Register</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
         {{ register_form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Register!</legend>
             <div class="form-group">
-                {{ register_form.username.label(class="form-control-label")}}
+                {{ register_form.username.label(class="form-control-label login-register-label")}}
                 {% if register_form.username.errors %}
                     {{ register_form.username(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -21,7 +28,7 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ register_form.email.label(class="form-control-label")}}
+                {{ register_form.email.label(class="form-control-label login-register-label")}}
                 {% if register_form.email.errors %}
                     {{ register_form.email(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -34,7 +41,7 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ register_form.confirm_email.label(class="form-control-label")}}
+                {{ register_form.confirm_email.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_email.errors %}
                     {{ register_form.confirm_email(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -47,7 +54,7 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ register_form.password.label(class="form-control-label")}}
+                {{ register_form.password.label(class="form-control-label login-register-label")}}
                 {% if register_form.password.errors %}
                     {{ register_form.password(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -60,7 +67,7 @@
                 {% endif %}                
             </div>
             <div class="form-group">
-                {{ register_form.confirm_password.label(class="form-control-label")}}
+                {{ register_form.confirm_password.label(class="form-control-label login-register-label")}}
                 {% if register_form.confirm_password.errors %}
                     {{ register_form.confirm_password(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
@@ -73,17 +80,20 @@
                 {% endif %}    
             </div>
         </fieldset>
-        <div class="form-group d-flex justify-content-center">
-            {{ register_form.submit(class="btn btn-primary col-12")}}
-        </div>
-    </form>
-</div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        {{ register_form.submit(class="btn btn-success col-12")}}
+    </div>
+</form>
 <div class="d-flex justify-content-center">
-    <div class="border-top pt-3">
+    <div class="border-top pb-3">
         <small class="text-muted">
-            <a href="{{url_for('users.login')}}">Already a user? Login</a>
+            <a class="to-login" href="javascript:;">Already a user? Login</a>
         </small>
     </div>
 </div>
 
-{% endblock content %}
+{% block scripts %}
+    <script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
+{% endblock scripts %}
