New day, fresh start

--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -10,7 +10,7 @@
 <div id="leftPanel" class="panel col-md-2">
 
     <!-- UPR LH Panel, UTubs -->
-    <div id="UTubDeck" class="deck row h-50 mb-md-1 p-3">
+    <div id="UTubDeck" class="deck row h-50 md-mb-1 p-3" style="/*margin-bottom: 5px;*/">
         <div class="col-9 col-lg-9 mb-md-0">
             <h2></h2>
         </div>
@@ -54,7 +54,7 @@
 
 <!-- Center Panel, URLs -->
 <div id="centerPanel" class="panel col-md-7">
-    <div id="URLDeck" class="deck h-100 mb-md-1 p-3">
+    <div id="URLDeck" class="deck h-100 p-3" style="margin-bottom: -5px;">
         <div class="row justify-content-center mx-2">
             <div class="col-9 col-lg-9 mb-md-0 text-left">
                 <h2 id="UTubHeader" style="display: inline-block">Select a UTub</h2>
@@ -97,7 +97,7 @@
 <!-- Right Side Panel -->
 
 <div id="rightPanel" class="panel col-md-3">
-    <div id="MembersDeck" class="deck row h-50 mb-md-1 p-3" style="display:block">
+    <div id="MembersDeck" class="deck row h-50 md-mb-1 p-3" style="display: block; /*margin-bottom: 5px;*/">
 
         <h2>Members</h2>
 
